--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.apache.lucene:lucene-spatial:5.5.2'
 }
 
 tasks.named('test') {
